IataMessages/IataMessagesProcessor/Parsers/Antlr/ffm8Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ffm8.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class ffm8Parser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, LineIdentifierUld=3, SeparatorSlant=4, SeparatorHyphen=5, 
		A=6, N=7, G=8, SeparatorCrlf=9;
	public const int
		RULE_ffm8 = 0, RULE_standardMessageIdentification = 1, RULE_flightIdAndPointOfLoading = 2, 
		RULE_destinationHeader = 3, RULE_manifestCompleteIndicator = 4, RULE_pointOfUnloading = 5, 
		RULE_bulkLoadedCargo = 6, RULE_uldLoadedCargo = 7, RULE_consignments = 8, 
		RULE_uldDescription = 9, RULE_uldMovementInformation = 10, RULE_uldUtilisationDetail = 11, 
		RULE_otherServiceInformation = 12, RULE_customsOrigin = 13, RULE_otherCustSecurityAndRegulatCtrlInfo = 14, 
		RULE_flightIdentification = 15, RULE_firstPointOfArrivalInformation = 16, 
		RULE_nilCargoIndication = 17, RULE_aircraftIdentification = 18, RULE_arrivalInformation = 19, 
		RULE_departureInformation = 20, RULE_arrivalInformationDetail = 21, RULE_departureInformationDetail = 22, 
		RULE_awbIdentification = 23, RULE_awbOriginAndDestination = 24, RULE_quantityDetail = 25, 
		RULE_volumeDetail = 26, RULE_densityGroup = 27, RULE_totalWeightDetails = 28, 
		RULE_totalConsignmentPieces = 29, RULE_shrs = 30, RULE_specialHandlingRequirements = 31, 
		RULE_consignmentDetail = 32, RULE_dimensionsInformation = 33, RULE_consignmentOnwardMovementInfo = 34, 
		RULE_consignmentOnward = 35, RULE_onwardRoutingDetail = 36, RULE_onwardBookingDetail = 37, 
		RULE_osiDetails1stLine = 38, RULE_osiDetails2stLine = 39, RULE_uldOnwardRoutingDetail = 40, 
		RULE_uldOnwardBookingDetail = 41, RULE_uldIdentification = 42, RULE_uldPositionInformation = 43, 
		RULE_uldRemarks = 44, RULE_movementPriority = 45, RULE_natureOfGoods = 46, 
		RULE_dimensions = 47, RULE_dimensionsDetails = 48, RULE_otherCustSecurityAndRegulatCtrlInfoDet = 49, 
		RULE_standardMessageIdentifier = 50, RULE_messageTypeVersionNumber = 51, 
		RULE_messageSequenceNumber = 52, RULE_lineIdentifier = 53, RULE_airlinePrefix = 54, 
		RULE_awbSerialNumber = 55, RULE_airportCodeOfLoading = 56, RULE_airportCodeOfUnloading = 57, 
		RULE_airportCodeOfOrigin = 58, RULE_airportCodeOfDestitation = 59, RULE_airportCodeOfArrival = 60, 
		RULE_airportCodeOfNextDestination = 61, RULE_uldVolumeAvailableCode = 62, 
		RULE_nilCargoCode = 63, RULE_movementPriorityCode = 64, RULE_shipmentDescriptionCode = 65, 
		RULE_volumeCode = 66, RULE_volumeAmount = 67, RULE_densityIndicator = 68, 
		RULE_densityGroupInner = 69, RULE_dayOfScheduledArrival = 70, RULE_monthOfScheduledArrival = 71, 
		RULE_timeOfScheduledArrival = 72, RULE_dayOfScheduledDeparture = 73, RULE_monthOfScheduledDeparture = 74, 
		RULE_timeOfScheduledDeparture = 75, RULE_flightNumber = 76, RULE_customsOriginCode = 77, 
		RULE_carrierCode = 78, RULE_uldType = 79, RULE_uldSerialNumber = 80, RULE_uldOwnerCode = 81, 
		RULE_uldLoadingIndicator = 82, RULE_measurementUnitCode = 83, RULE_lengthDimension = 84, 
		RULE_widthDimension = 85, RULE_heightDimension = 86, RULE_weightCode = 87, 
		RULE_weight = 88, RULE_numberOfPieces = 89, RULE_specialHandlingCode = 90, 
		RULE_isoCountryCode = 91, RULE_informationIdentifier = 92, RULE_custSecurityAndRegulatCtrlInfoId = 93, 
		RULE_endOfMessageCode = 94, RULE_aircraftRegistration = 95, RULE_supplemCustSecurityAndRegulatCtrlInfo = 96, 
		RULE_manifestDescriptionOfGoods = 97, RULE_uldRemarksDescription = 98, 
		RULE_osiDescription = 99;
	public static readonly string[] ruleNames = {
		"ffm8", "standardMessageIdentification", "flightIdAndPointOfLoading", 
		"destinationHeader", "manifestCompleteIndicator", "pointOfUnloading", 
		"bulkLoadedCargo", "uldLoadedCargo", "consignments", "uldDescription", 
		"uldMovementInformation", "uldUtilisationDetail", "otherServiceInformation", 
		"customsOrigin", "otherCustSecurityAndRegulatCtrlInfo", "flightIdentification", 
		"firstPointOfArrivalInformation", "nilCargoIndication", "aircraftIdentification", 
		"arrivalInformation", "departureInformation", "arrivalInformationDetail", 
		"departureInformationDetail", "awbIdentification", "awbOriginAndDestination", 
		"quantityDetail", "volumeDetail", "densityGroup", "totalWeightDetails", 
		"totalConsignmentPieces", "shrs", "specialHandlingRequirements", "consignmentDetail", 
		"dimensionsInformation", "consignmentOnwardMovementInfo", "consignmentOnward", 
		"onwardRoutingDetail", "onwardBookingDetail", "osiDetails1stLine", "osiDetails2stLine", 
		"uldOnwardRoutingDetail", "uldOnwardBookingDetail", "uldIdentification", 
		"uldPositionInformation", "uldRemarks", "movementPriority", "natureOfGoods", 
		"dimensions", "dimensionsDetails", "otherCustSecurityAndRegulatCtrlInfoDet", 
		"standardMessageIdentifier", "messageTypeVersionNumber", "messageSequenceNumber", 
		"lineIdentifier", "airlinePrefix", "awbSerialNumber", "airportCodeOfLoading", 
		"airportCodeOfUnloading", "airportCodeOfOrigin", "airportCodeOfDestitation", 
		"airportCodeOfArrival", "airportCodeOfNextDestination", "uldVolumeAvailableCode", 
		"nilCargoCode", "movementPriorityCode", "shipmentDescriptionCode", "volumeCode", 
		"volumeAmount", "densityIndicator", "densityGroupInner", "dayOfScheduledArrival", 
		"monthOfScheduledArrival", "timeOfScheduledArrival", "dayOfScheduledDeparture", 
		"monthOfScheduledDeparture", "timeOfScheduledDeparture", "flightNumber", 
		"customsOriginCode", "carrierCode", "uldType", "uldSerialNumber", "uldOwnerCode", 
		"uldLoadingIndicator", "measurementUnitCode", "lengthDimension", "widthDimension", 
		"heightDimension", "weightCode", "weight", "numberOfPieces", "specialHandlingCode", 
		"isoCountryCode", "informationIdentifier", "custSecurityAndRegulatCtrlInfoId", 
		"endOfMessageCode", "aircraftRegistration", "supplemCustSecurityAndRegulatCtrlInfo", 
		"manifestDescriptionOfGoods", "uldRemarksDescription", "osiDescription"
	};

	private static readonly string[] _LiteralNames = {
		null, "'.'", "','", "'ULD/'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, "LineIdentifierUld", "SeparatorSlant", "SeparatorHyphen", 
		"A", "N", "G", "SeparatorCrlf"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ffm8.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static ffm8Parser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ffm8Parser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ffm8Parser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Ffm8Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StandardMessageIdentificationContext standardMessageIdentification() {
			return GetRuleContext<StandardMessageIdentificationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FlightIdAndPointOfLoadingContext flightIdAndPointOfLoading() {
			return GetRuleContext<FlightIdAndPointOfLoadingContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ManifestCompleteIndicatorContext manifestCompleteIndicator() {
			return GetRuleContext<ManifestCompleteIndicatorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DestinationHeaderContext[] destinationHeader() {
			return GetRuleContexts<DestinationHeaderContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DestinationHeaderContext destinationHeader(int i) {
			return GetRuleContext<DestinationHeaderContext>(i);
		}
		public Ffm8Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ffm8; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iffm8Visitor<TResult> typedVisitor = visitor as Iffm8Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFfm8(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Ffm8Context ffm8() {
		Ffm8Context _localctx = new Ffm8Context(Context, State);
		EnterRule(_localctx, 0, RULE_ffm8);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 200;
			standardMessageIdentification();
			State = 201;
			flightIdAndPointOfLoading();
			State = 203;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 202;
					destinationHeader();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 205;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			State = 207;
			manifestCompleteIndicator();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StandardMessageIdentificationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StandardMessageIdentifierContext standardMessageIdentifier() {
			return GetRuleContext<StandardMessageIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant() { return GetToken(ffm8Parser.SeparatorSlant, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public MessageTypeVersionNumberContext messageTypeVersionNumber() {
			return GetRuleContext<MessageTypeVersionNumberContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(ffm8Parser.SeparatorCrlf, 0); }
		public StandardMessageIdentificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_standardMessageIdentification; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iffm8Visitor<TResult> typedVisitor = visitor as Iffm8Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStandardMessageIdentification(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StandardMessageIdentificationContext standardMessageIdentification() {
		StandardMessageIdentificationContext _localctx = new StandardMessageIdentificationContext(Context, State);
		EnterRule(_localctx, 2, RULE_standardMessageIdentification);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 209;
			standardMessageIdentifier();
			State = 210;
			Match(SeparatorSlant);
			State = 211;
			messageTypeVersionNumber();
			State = 212;
			Match(SeparatorCrlf);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FlightIdAndPointOfLoadingContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MessageSequenceNumberContext messageSequenceNumber() {
			return GetRuleContext<MessageSequenceNumberContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SeparatorSlant() { return GetTokens(ffm8Parser.SeparatorSlant); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant(int i) {
			return GetToken(ffm8Parser.SeparatorSlant, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FlightIdentificationContext flightIdentification() {
			return GetRuleContext<FlightIdentificationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AirportCodeOfLoadingContext airportCodeOfLoading() {
			return GetRuleContext<AirportCodeOfLoadingContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(ffm8Parser.SeparatorCrlf, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AircraftIdentificationContext aircraftIdentification() {
			return GetRuleContext<AircraftIdentificationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FirstPointOfArrivalInformationContext firstPointOfArrivalInformation() {
			return GetRuleContext<FirstPointOfArrivalInformationContext>(0);
		}
		public FlightIdAndPointOfLoadingContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_flightIdAndPointOfLoading; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iffm8Visitor<TResult> typedVisitor = visitor as Iffm8Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFlightIdAndPointOfLoading(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FlightIdAndPointOfLoadingContext flightIdAndPointOfLoading() {
		FlightIdAndPointOfLoadingContext _localctx = new FlightIdAndPointOfLoadingContext(Context, State);
		EnterRule(_localctx, 4, RULE_flightIdAndPointOfLoading);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 214;
			messageSequenceNumber();
			State = 215;
			Match(SeparatorSlant);
			State = 216;
			flightIdentification();
			State = 217;
			Match(SeparatorSlant);
			State = 218;
			airportCodeOfLoading();
			State = 220;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				State = 219;
				aircraftIdentification();
				}
				break;
			}
			State = 223;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SeparatorSlant) {
				{
				State = 222;
				firstPointOfArrivalInformation();
				}
			}

			State = 225;
			Match(SeparatorCrlf);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DestinationHeaderContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PointOfUnloadingContext pointOfUnloading() {
			return GetRuleContext<PointOfUnloadingContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BulkLoadedCargoContext bulkLoadedCargo() {
			return GetRuleContext<BulkLoadedCargoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UldLoadedCargoContext[] uldLoadedCargo() {
			return GetRuleContexts<UldLoadedCargoContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public UldLoadedCargoContext uldLoadedCargo(int i) {
			return GetRuleContext<UldLoadedCargoContext>(i);
		}
		public DestinationHeaderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_destinationHeader; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iffm8Visitor<TResult> typedVisitor = visitor as Iffm8Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDestinationHeader(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DestinationHeaderContext destinationHeader() {
		DestinationHeaderContext _localctx = new DestinationHeaderContext(Context, State);
		EnterRule(_localctx, 6, RULE_destinationHeader);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 227;
			pointOfUnloading();
			State = 229;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==N) {
				{
				State = 228;
				bulkLoadedCargo();
				}
			}

			State = 234;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==LineIdentifierUld) {
				{
				{
				State = 231;
				uldLoadedCargo();
				}
				}
				State = 236;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ManifestCompleteIndicatorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public EndOfMessageCodeContext endOfMessageCode() {
			return GetRuleContext<EndOfMessageCodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(ffm8Parser.SeparatorCrlf, 0); }
		public ManifestCompleteIndicatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_manifestCompleteIndicator; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iffm8Visitor<TResult> typedVisitor = visitor as Iffm8Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitManifestCompleteIndicator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ManifestCompleteIndicatorContext manifestCompleteIndicator() {
		ManifestCompleteIndicatorContext _localctx = new ManifestCompleteIndicatorContext(Context, State);
		EnterRule(_localctx, 8, RULE_manifestCompleteIndicator);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 237;
			endOfMessageCode();
			State = 238;
			Match(SeparatorCrlf);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PointOfUnloadingContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AirportCodeOfUnloadingContext airportCodeOfUnloading() {
			return GetRuleContext<AirportCodeOfUnloadingContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(ffm8Parser.SeparatorCrlf, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NilCargoIndicationContext nilCargoIndication() {
			return GetRuleContext<NilCargoIndicationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArrivalInformationContext arrivalInformation() {
			return GetRuleContext<ArrivalInformationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DepartureInformationContext departureInformation() {
			return GetRuleContext<DepartureInformationContext>(0);
		}
		public PointOfUnloadingContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pointOfUnloading; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iffm8Visitor<TResult> typedVisitor = visitor as Iffm8Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPointOfUnloading(this);
			else return visitor.VisitChildren(this);
		}
	}
